# youtube-downloader

./: .gitignore  LICENSE  README.md  design-mockup.html  package.json
.github/workflows/: build.yml  ci.yml
scripts/: install.bat  install.ps1  install.sh
src/: i18n.js  index.html  main.js  mock.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
youtube-downloader/: README.md  package-lock.json  package.json
youtube-downloader/.github/workflows/: build.yml
youtube-downloader/src/: i18n.js  index.html  main.js  styles.css
youtube-downloader/src-tauri/: Cargo.toml  tauri.conf.json
youtube-downloader/src-tauri/src/: lib.rs
