[package]
name = "youtube-downloader"
version = "0.2.1"
description = "YouTube Downloader - Simple et léger"
authors = ["you"]
edition = "2021"

[lib]
name = "youtube_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
opener = "0.7"
dirs = "6"
libc = "0.2"

